# ChatApp

./: .gitignore  CMakeLists.txt  ProtocolSpec.md  Readme.md  Todo.md
client/: CMakeLists.txt  Source.cpp
client/Core/: Client.cpp  Client.hpp
client/UI/: basic.cpp  basic.hpp
client/UI/Commands/: Command.hpp  CommandDisconnect.hpp  CommandHelp.hpp  CommandText.cpp  CommandText.hpp
common/: CmakeLists.txt  CommonLib.hpp  Source.cpp
common/Containers/: tsQueue.hpp
common/Logger/: Logger.cpp  Logger.hpp
common/Networking/: HeaderHandlers.hpp  NetworkTypes.hpp  Serialization.hpp  types.hpp
common/Utils/: ClientData.hpp  addHeader.hpp  tsQueue.hpp  utils.hpp
server/: CMakeLists.txt  Source.cpp
server/Core/: Server.cpp  Server.hpp  Session.cpp  Session.hpp
